--- a/stripe/public/index.html
+++ b/stripe/public/index.html
@@ -48,7 +48,7 @@
     <script src="https://js.stripe.com/v3/"></script>
     <script>
         // Load API URL from environment variable
-        const API_URL = window.API_URL || 'http://localhost:3000/api';
+        const API_URL = window.API_URL || 'https://stripe-payment.algofolks.com/api';
         const stripe = Stripe('pk_test_51RAUufFRtxUdrNGCljb5TkX16xKPX6EiJRSHPHENAfBx6AVvaE83LOBKC41ltr1HLECLiKuuTYdWauBuOyBTRsrF009tGlRQ9C');
 
         let selectedPlanId = null;
