--- a/stripe/public/index.html
+++ b/stripe/public/index.html
@@ -73,98 +73,160 @@
 
         // Load product data when page loads
         document.addEventListener('DOMContentLoaded', fetchProductMapping);
+            function injectPopupHTML() {
+                if (window.popupInjected) return;
+                window.popupInjected = true;
 
-        function injectPopupHTML() {
-            if (popupInjected) return;
-            
-            const popupHTML = `
-<div id="popupOverlay" style="display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.5);z-index:1000;justify-content:center;align-items:center;">
-    <div style="background:#fff;padding:20px;border-radius:12px;width:90%;max-width:600px;height:80vh;overflow:hidden;position:relative;box-shadow:0 10px 30px rgba(0,0,0,0.2);display:flex;flex-direction:column;justify-content:space-between;">
+                // Inject CSS (scoped to .my-stripe-popup-root)
+                if (!document.getElementById('my-stripe-popup-style')) {
+                    const style = document.createElement('style');
+                    style.id = 'my-stripe-popup-style';
+                    style.innerHTML = `
+.my-stripe-popup-root { font-family: Arial, sans-serif !important; }
+.my-stripe-popup-root .popup-overlay {
+  display: none; position: fixed; top: 0; left: 0; width: 100vw; height: 100vh;
+  background: rgba(0,0,0,0.5); z-index: 99999; justify-content: center; align-items: center;
+}
+.my-stripe-popup-root .popup-content {
+  background: #fff; padding: 20px; border-radius: 12px; width: 95%; max-width: 600px;padding-top:30px;padding-bottom:30px;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.2); display: flex; flex-direction: column; gap: 16px;
+}
+.my-stripe-popup-root .popup-header {
+  display: flex; justify-content: space-between; align-items: center; margin-bottom: 0;
+}
+.my-stripe-popup-root .popup-title {
+  font-size: 24px; font-weight: bold; margin: 0 0 2px 0;
+}
+.my-stripe-popup-root .close-x {
+  font-size: 22px; cursor: pointer; color: #999; font-weight: normal; line-height: 1;
+}
+.my-stripe-popup-root .plan-summary {
+  background: #f9f9f9; border: 1px solid #eee; border-radius: 12px; padding: 12px; margin-bottom: 0;
+  display: flex; flex-direction: column; gap: 4px;
+}
+.my-stripe-popup-root .plan-cards { display: flex; gap: 10px; }
+.my-stripe-popup-root .plan-card {
+  flex: 1; background: #fff; border-radius: 10px; border: 1px solid #eee; padding: 14px;
+  display: flex; flex-direction: column; justify-content: space-between; min-width: 0;
+}
+.my-stripe-popup-root .plan-card-title {
+  font-size: 15px; font-weight: 600; color: #666; margin-bottom: 2px;
+}
+.my-stripe-popup-root .plan-card-price {
+  font-size: 20px; font-weight: bold; color: #000; margin: 8px 0;
+}
+.my-stripe-popup-root .plan-card-oldprice {
+  color: #999; text-decoration: line-through; font-size: 15px; font-weight: normal; margin-left: 6px;
+}
+.my-stripe-popup-root .plan-card-period {
+  font-size: 13px; color: #666; margin-left: 2px;
+}
+.my-stripe-popup-root .plan-card ul {
+  list-style: none; padding: 0; font-size: 14px; color: #444; margin: 0 0 10px 0;
+}
+.my-stripe-popup-root .plan-btn {
+  padding: 10px 0;
+  background: #3B0764;
+  color: #fff;
+  border: none;
+  border-radius: 6px;
+  font-size: 16px;
+  font-weight: 600;
+  cursor: pointer;
+  width: 100%;
+  margin-top: 10px;
+  transition: background 0.2s;
+  font-family: Arial, sans-serif;
+}
+.my-stripe-popup-root .plan-btn.elite { background: #8044FF; }
+.my-stripe-popup-root .plan-btn.premium { background: #3B0764; }
+.my-stripe-popup-root .plan-btn:hover { opacity: 0.92; }
+.my-stripe-popup-root .or-divider {
+  display: flex; align-items: center; text-align: center; margin: 10px 0 0 0; height: 24px;
+}
+.my-stripe-popup-root .or-divider hr { flex: 1; border: none; border-top: 1px solid #ccc; margin: 0; }
+.my-stripe-popup-root .or-divider span {
+  padding: 0 6px; font-size: 12px; color: #666; background: #fff; position: relative; z-index: 1; font-family: Arial, sans-serif;
+}
+.my-stripe-popup-root .continue-btn {
+  padding: 10px 0;
+  background: #fff;
+  color: #000;
+  border: 1.5px solid #000;
+  border-radius: 20px;
+  font-size: 12px;
+  font-weight: 600;
+  cursor: pointer;
+  width: 100%;
+  margin-top: 10px;
+  transition: background 0.2s, color 0.2s;
+  font-family: Arial, sans-serif;
+  text-transform: uppercase;
+}
+.my-stripe-popup-root .continue-btn:hover { background: #000; color: #fff; }
+@media (max-width: 768px) {
+  .my-stripe-popup-root .plan-cards { flex-direction: column; gap: 10px; }
+  .my-stripe-popup-root .popup-content { padding: 10px; }
+}
+        `;
+                    document.head.appendChild(style);
+                }
 
-        <!-- Header -->
-        <div style="margin-bottom: 10px;">
-            <div style="display: flex; justify-content: space-between; align-items: center;">
-                <div>
-                    <h3 style="font-size: 24px; margin-bottom: 4px;">Checkout Details</h3>
-                </div>
-                <span onclick="closePopup()" style="font-size: 22px; cursor: pointer; color: #999;">&times;</span>
-            </div>
+                // Popup HTML (no inline styles, all classes)
+                const popupHTML = `
+<div class="my-stripe-popup-root">
+  <div class="popup-overlay" id="popupOverlay">
+    <div class="popup-content">
+      <div class="popup-header">
+        <div class="popup-title">Checkout Details</div>
+        <span class="close-x" onclick="closePopup()">&times;</span>
+      </div>
+      <div class="plan-summary" id="selectedPlanSummary">
+        <div id="kitName" style="font-size:13px;color:#666;font-weight:500;"></div>
+        <div><span id="planPrice" style="font-size:20px;font-weight:700;color:#000;"></span></div>
+      </div>
+      <div style="padding:15px 0;">
+        <h3 style="font-size:18px;color:#666;margin:0;">Choose a support plan to get our support.</h3>
+      </div>
+      <div class="plan-cards">
+        <div class="plan-card">
+          <div>
+            <div class="plan-card-title">PREMIUM</div>
+            <div class="plan-card-price">$99 <span class="plan-card-oldprice">$199</span> <span class="plan-card-period">/mo</span></div>
+            <ul>
+              <li>✓ Dedicated Account Manager</li>
+              <li>✓ Priority Support (24-48 hr turnaround)</li>
+              <li>✓ Standard(Service Level Agreement)</li>
+              <li>✓ Access to Premium Templates/Assets</li>
+            </ul>
+          </div>
+          <button class="plan-btn premium" onclick="proceedToCheckout('price_1RMRqWFRtxUdrNGCUYfXbac8')">CONTINUE WITH PREMIUM</button>
         </div>
-
-        <!-- Plan Summary -->
-        <div id="selectedPlanSummary" style="background:#f9f9f9;border:1px solid #eee;border-radius:12px;padding:12px;margin-bottom:0px;">
-            <div id="kitName" style="font-size:13px;color:#666;font-weight:500;"></div>
-            <div><span id="planPrice" style="font-size:20px;font-weight:700;color:#000;"></span></div>
+        <div class="plan-card">
+          <div>
+            <div class="plan-card-title">ELITE</div>
+            <div class="plan-card-price">$199 <span class="plan-card-oldprice">$99</span> <span class="plan-card-period">/mo</span></div>
+            <ul>
+              <li>✓ Everything in Premium</li>
+              <li>✓ Personalized Project Manager</li>
+              <li>✓ AI-Powered Insights/Recommendations</li>
+              <li>✓ Dedicated Slack/Phone Support</li>
+            </ul>
+          </div>
+          <button class="plan-btn elite" onclick="proceedToCheckout('price_1RMRlVFRtxUdrNGC0raPhXjS')">CONTINUE WITH ELITE</button>
         </div>
-
-        <!-- Support Plan Title -->
-<div style="padding:15px 0;">
-    <h3 style="font-size:18px;color:#666;margin:0;">Choose a support plan to get our support.</h3>
-</div>
-
-
-        <!-- Plan Cards (Premium first, then Elite) -->
-        <div style="display:flex;gap:10px;flex:1;">
-            <!-- Premium Plan -->
-            <div style="flex:1;background:#fff;border-radius:10px;border:1px solid #eee;padding:14px;display:flex;flex-direction:column;justify-content:space-between;">
-                <div>
-                    <div style="font-size:15px;font-weight:600;color:#666;">PREMIUM</div>
-                    <div style="font-size:20px;margin:8px 0;color:#000;"><b>$99</b> <span style="color:#999;text-decoration:line-through;">$199</span> <span style="font-size:13px;color:#666;">/mo</span></div>
-
-                    <ul style="list-style:none;padding:0;font-size:14px;color:#444;margin:0;">
-                        <li>✓ Dedicated Account Manager</li>
-                        <li>✓ Priority Support (24-48 hr turnaround)</li>
-                        <li>✓ Standard SLA (Service Level Agreement)</li>
-                        <li>✓ Access to Premium Templates/Assets</li>
-                    </ul>
-                </div>
-                <button style="margin-top:10px;padding:10px;background:#3B0764;color:white;border:none;border-radius:6px;font-size:14px;cursor:pointer;" onclick="proceedToCheckout('price_1RMRqWFRtxUdrNGCUYfXbac8')">
-                    CONTINUE WITH PREMIUM
-                </button>
-            </div>
-
-            <!-- Elite Plan -->
-            <div style="flex:1;background:#fff;border-radius:10px;border:1px solid #eee;padding:14px;display:flex;flex-direction:column;justify-content:space-between;">
-                <div>
-                    <div style="font-size:15px;font-weight:600;color:#666;">ELITE</div>
-                    <div style="font-size:20px;margin:8px 0;color:#000;"><b>$199</b> <span style="color:#999;text-decoration:line-through;">$99</span> <span style="font-size:13px;color:#666;">/mo</span></div>
-
-                    <ul style="list-style:none;padding:0;font-size:14px;color:#444;margin:0;">
-                        <li>✓ Everything in Premium</li>
-                        <li>✓ Personalized Project Manager</li>
-                        <li>✓ AI-Powered Insights/Recommendations</li>
-                        <li>✓ Dedicated Slack/Phone Support</li>
-                    </ul>
-                </div>
-                <button style="margin-top:10px;padding:10px;background:#8044FF;color:white;border:none;border-radius:6px;font-size:14px;cursor:pointer;" onclick="proceedToCheckout('price_1RMRlVFRtxUdrNGC0raPhXjS')">
-                    CONTINUE WITH ELITE
-                </button>
-            </div>
-        </div>
-
-        <!-- OR Divider -->
-        <div style="display:flex;align-items:center;text-align:center;margin:10px 0;">
-            <hr style="flex:1;border:none;border-top:1px solid #ccc;" />
-            <span style="padding:0 6px;font-size:12px;color:#666;">OR</span>
-            <hr style="flex:1;border:none;border-top:1px solid #ccc;" />
-        </div>
-
-        <!-- Without Support Button -->
-        <button
-            onmouseover="this.style.background='black'; this.style.color='white';"
-            onmouseout="this.style.background='transparent'; this.style.color='black';"
-            onclick="proceedToCheckout()"
-            style="padding:10px;background:transparent;color:black;border:1.5px solid black;border-radius:20px;font-size:12px;cursor:pointer;font-weight:600;text-transform:uppercase;">
-            Continue without support
-        </button>
-
+      </div>
+      <div class="or-divider">
+        <hr><span>OR</span><hr>
+      </div>
+      <button class="continue-btn" onclick="proceedToCheckout()">Continue without support</button>
     </div>
+  </div>
 </div>
-`;
+    `;
 
-            document.body.insertAdjacentHTML('beforeend', popupHTML);
-            popupInjected = true;
-        }
+                document.body.insertAdjacentHTML('beforeend', popupHTML);
+            }
 
         async function openPopup(productId) {
             try {
