--- a/stripe/public/index.html
+++ b/stripe/public/index.html
@@ -47,7 +47,7 @@
 
     <script src="https://js.stripe.com/v3/"></script>
     <script src="https://stripe-payment.algofolks.com/payment-script.js"></script>
-
+    <!-- <script src="http://localhost:3000/payment-script.js"></script>  -->
 </body>
 
 </html>
