--- a/stripe/public/index.html
+++ b/stripe/public/index.html
@@ -37,7 +37,7 @@
             </div>
         </div>
 
-        <button onclick="openPopup('businessindex2')" 
+        <button onclick="openPopup('businessindex1')" 
             style="width: 100%; padding: 16px; font-size: 16px; border-radius: 8px; background: #3B0764; color: white; border: none; cursor: pointer; font-weight: 500; transition: all 0.3s ease; text-transform: uppercase; letter-spacing: 0.5px;"
             onmouseover="this.style.background='#2d0549'" 
             onmouseout="this.style.background='#3B0764'">
@@ -46,8 +46,8 @@
     </div>
 
     <script src="https://js.stripe.com/v3/"></script>
-    <script src="https://stripe-payment.algofolks.com/payment-script.js"></script>
-    <!-- <script src="http://localhost:3000/payment-script.js"></script>  -->
+    <!-- <script src="https://stripe-payment.algofolks.com/payment-script.js"></script> -->
+    <script src="http://localhost:3000/payment-script.js"></script> 
 </body>
 
 </html>
