--- a/stripe/public/index.html
+++ b/stripe/public/index.html
@@ -46,8 +46,8 @@
     </div>
 
     <script src="https://js.stripe.com/v3/"></script>
-    <!-- <script src="https://stripe-payment.algofolks.com/payment-script.js"></script> -->
-    <script src="http://localhost:3000/payment-script.js"></script> 
+    <script src="https://stripe-payment.algofolks.com/payment-script.js"></script>
+    <!-- <script src="http://localhost:3000/payment-script.js"></script>  -->
 </body>
 
 </html>
