--- a/stripe/public/success.html
+++ b/stripe/public/success.html
@@ -2,56 +2,73 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Payment Successful</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-color: #f8f9fa;
+            background: linear-gradient(135deg, #e0f7e9, #f8f9fa);
         }
 
         .success-container {
             text-align: center;
-            padding: 40px;
-            background: white;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            max-width: 500px;
+            padding: 50px 40px;
+            background: #ffffff;
+            border-radius: 16px;
+            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.12);
+            max-width: 480px;
+            width: 90%;
+            animation: fadeIn 0.6s ease-in-out;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
 
         .success-icon {
             color: #28a745;
-            font-size: 48px;
-            margin-bottom: 20px;
+            font-size: 64px;
+            margin-bottom: 24px;
         }
 
         h1 {
-            color: #333;
-            margin-bottom: 20px;
+            color: #222;
+            margin-bottom: 16px;
         }
 
         p {
-            color: #666;
-            margin-bottom: 30px;
+            color: #555;
+            margin-bottom: 32px;
+            line-height: 1.6;
         }
 
-        .back-button {
+        .redirect-button {
             background: #28a745;
             color: white;
-            padding: 12px 24px;
+            padding: 14px 28px;
             border: none;
-            border-radius: 5px;
-            text-decoration: none;
+            border-radius: 8px;
             font-size: 16px;
+            cursor: pointer;
+            text-decoration: none;
+            transition: background 0.3s ease;
         }
 
-        .back-button:hover {
+        .redirect-button:hover {
             background: #218838;
         }
     </style>
@@ -61,8 +78,8 @@
     <div class="success-container">
         <div class="success-icon">✓</div>
         <h1>Payment Successful!</h1>
-        <p>Thank you for your purchase. A confirmation email has been sent to you.</p>
-       
+        <p>Thank you for your purchase. A confirmation email has been sent to your inbox.</p>
+        <a href="https://totalbizpack.com/" class="redirect-button">Go to Homepage</a>
     </div>
 </body>
 
